--- a/src/Club/ShopBundle/Resources/views/AdminProduct/form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProduct/form.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form) }}
+{{ form_start(form, {'attr':{'novalidate':'true'}}) }}
 
 {{ form_row(form.product_name) }}
 {{ form_row(form.description) }}
