--- a/src/Club/ShopBundle/Resources/views/Shop/product_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/product_table.html.twig
@@ -17,7 +17,7 @@
         {% else %}
         <td><img src="{{ asset('bundles/clublayout/images/icons/32x32/page_white_camera.png') }}" title="{% trans %}No image{% endtrans %}" alt="{% trans %}No image{% endtrans %}" /></td>
         {% endif %}
-        <td><a href="{{ path('shop_product', {'id':product.id}) }}">{{ product.productName }}</a> <em>{{ product.description|truncate(200) }}</em></td>
+        <td><a href="{{ path('shop_product', {'id':product.id}) }}">{{ product.productName }}</a> <em>{{ product.description|striptags|truncate(200) }}</em></td>
         <td>{{ product.specialPrice|club_price }}</td>
         <td><a href="{{ path('shop_product_cart', {'id':product.id}) }}"><img src="{{ asset('bundles/clublayout/images/icons/32x32/cart.png') }}" alt="{% trans %}Put in cart{% endtrans %}" title="{% trans %}Put in cart{% endtrans %}" /></a></td>
     </tr>
