Improved style some more.

--- a/src/Club/KioskBundle/Resources/views/Kiosk/index.html.twig
+++ b/src/Club/KioskBundle/Resources/views/Kiosk/index.html.twig
@@ -55,7 +55,7 @@ body {
 
 <!-- Button bar -->
 <div class="box hori pack-center mar5">
-    <p id="auth_dialog"><span style="padding:5px; margin-left:5px;" class="bgcolor">{% trans %}Velkommen{% endtrans %} <span id="auth_user"></span></span></p>
+    <p id="auth_dialog"><span id="welcome-box">{% trans %}Velkommen{% endtrans %} <span id="auth_user"></span></span></p>
     <button id='button_login'>{% trans %}Log ind{% endtrans %}</button>
     <button id='button_logout'>{% trans %}Log ud{% endtrans %}</button>
 </div>
