--- a/src/Club/KioskBundle/Resources/public/style.css
+++ b/src/Club/KioskBundle/Resources/public/style.css
@@ -255,3 +255,8 @@ label {
 #login_dialog_error {
     width: 100%;
 }
+#welcome-box {
+    color: #000000;
+    font-size: 17px;
+    padding-right: 20px;
+}
