Improved kiosk overlay.

--- a/src/Club/KioskBundle/Resources/public/style.css
+++ b/src/Club/KioskBundle/Resources/public/style.css
@@ -249,8 +249,10 @@ label {
     height: 100%;
     top: 0;
     left: 0;
-    background-color: #000000;
-    opacity: 0.2;
+    bottom: 0;
+    z-index: 10;
+    background-color: rgba(0,0,0,0.5);
+
 }
 #login_dialog_error {
     width: 100%;
