--- a/src/Club/BookingBundle/Resources/views/AdminPlan/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlan/index.html.twig
@@ -12,30 +12,41 @@
 
 {% block body %}
 <table class="table">
-  <thead>
+    <thead>
+        <tr>
+            <th>{% trans %}Name{% endtrans %}</th>
+            <th>{% trans %}Start{% endtrans %}</th>
+            <th>{% trans %}Repeat{% endtrans %}</th>
+            <th>{% trans %}Active{% endtrans %}</th>
+            <th class="action">{% trans %}Action{% endtrans %}</th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for plan in plans %}
     <tr>
-      <th>{% trans %}Name{% endtrans %}</th>
-      <th>{% trans %}Start{% endtrans %}</th>
-      <th>{% trans %}Repeat{% endtrans %}</th>
-      <th class="action">{% trans %}Action{% endtrans %}</th>
+        <td>{{ plan.name }}</td>
+        <td>{{ plan.start|club_datetime }}</td>
+        <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':plan.repeating} %}</td>
+        <td>
+            {% if plan.status == 1 %}
+            {% include "ClubLayoutBundle:Default:inactive.html.twig" %}
+            {% else %}
+            {% include "ClubLayoutBundle:Default:active.html.twig" %}
+            {% endif %}
+        </td>
+        <td>
+            {% if plan.status == 1 %}
+            {% include "ClubLayoutBundle:Default:overwrite_link.html.twig" with {'url':path('club_booking_adminplan_overwrite', { 'id':plan.id })} %}
+            {% endif %}
+            {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_booking_adminplan_edit', { 'id':plan.id })} %}
+            {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_booking_adminplan_delete', { 'id':plan.id })} %}
+        </td>
     </tr>
-  </thead>
-  <tbody>
-  {% for plan in plans %}
+    {% else %}
     <tr>
-      <td>{{ plan.name }}</td>
-      <td>{{ plan.start|club_datetime }}</td>
-      <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':plan.repeating} %}</td>
-      <td>
-        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_booking_adminplan_edit', { 'id':plan.id })} %}
-        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_booking_adminplan_delete', { 'id':plan.id })} %}
-      </td>
+        <td colspan="4">{% trans %}There are no plans.{% endtrans %}</td>
     </tr>
-  {% else %}
-  <tr>
-    <td colspan="4">{% trans %}There are no plans.{% endtrans %}</td>
-  </tr>
-  {% endfor %}
-  </tbody>
+    {% endfor %}
+    </tbody>
 </table>
 {% endblock %}
