--- a/src/Club/LayoutBundle/Resources/views/Default/flash_success.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/flash_success.html.twig
@@ -1,6 +1,6 @@
 {% for flashMessage in app.session.flashbag.get('notice') %}
 <div class="alert alert-success">
-    <strong>{% trans %}Well done!{% endtrans %}</strong>
+    <img src="{{ asset('bundles/clublayout/images/icons/32x32/accept_button.png') }}" />
     {{ flashMessage }}
 </div>
 {% endfor %}
