--- a/src/Club/LayoutBundle/Resources/views/Default/flash_warning.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/flash_warning.html.twig
@@ -1,13 +1,13 @@
 {% for flashMessage in app.session.flashbag.get('warning') %}
-<div class="alert alert-block">
-    <strong>{% trans %}Warning!{% endtrans %}</strong>
+<div class="alert alert-warning">
+    <img src="{{ asset('bundles/clublayout/images/icons/32x32/warning.png') }}" />
     {{ flashMessage }}
 </div>
 {% endfor %}
 
 {% if msg is defined %}
-<div class="alert alert-block">
-    <strong>{% trans %}Warning!{% endtrans %}</strong>
+<div class="alert alert-warning">
+    <img src="{{ asset('bundles/clublayout/images/icons/32x32/warning.png') }}" />
     {{ msg }}
 </div>
 {% endif %}
