Rewrite flash.html.twig to new plugin.

--- a/src/Club/InstallerBundle/Resources/views/base.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/base.html.twig
@@ -67,7 +67,7 @@
 
             {% block pagenav %}{% endblock %}
 
-            {% include 'ClubLayoutBundle:Default:flash.html.twig' %}
+            {% include 'ClubFormExtraBundle:Default:flash.html.twig' %}
             {% block body %}{% endblock %}
 
         </div>
