--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -89,7 +89,7 @@
                 {% block logger %}{% render controller("ClubLogBundle:Log:LogView") %}{% endblock %}
             {% endif %}
 
-            {% include 'ClubLayoutBundle:Default:flash.html.twig' %}
+            {% include 'ClubFormExtraBundle:Default:flash.html.twig' %}
             {% block body %}{% endblock %}
 
         </div>
