--- a/src/Club/UserBundle/Resources/views/Auth/resetPassword.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/resetPassword.html.twig
@@ -2,8 +2,7 @@
 
 {% block body %}
 
-{% include "ClubLayoutBundle:Default:flash.html.twig" %}
-{% include "ClubLayoutBundle:Default:flash_info.html.twig" with {'msg':'Enter your new password below.'|trans} %}
+{% include "ClubFormExtraBundle:Default:flash.html.twig" %}
 
 <form method="POST" action="{{ path('auth_reset', {'hash':forgot.hash}) }}" class="horizontal">
 
